--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^2.1.8",
     "@heroicons/react": "^2.1.5",
+    "@types/react": "^18.3.11",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
@@ -18,6 +19,7 @@
     "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
+    "@types/node": "22.7.4",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
     "postcss": "^8",
